--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,39 @@
 [tox]
-envlist = py{36,37,38}-django{22,30}
+isolated_build = True
+envlist = py{36,37,38}-django{22,30} lint mypy
 
 [testenv]
 deps =
+    pytest
+    pytest-cov
+    pytest-django
+    coverage
     django22: Django==2.2
     django30: Django==3.0
 
-whitelist_externals = poetry
-skip_install = true
+commands =
+    django-admin --version
+    pytest --cov=my_app tests/
+
+[testenv:lint]
+deps =
+    pylint
+    pylint-django
+    flake8
+    flake8-bandit
+    flake8-docstrings
+    isort
+    black
 
 commands =
-    poetry lock  # required in order
-    poetry install -vvv
-    poetry run coverage erase
-    poetry run django-admin --version
-    poetry run pytest --cov=poetry_template tests/
-    poetry run coverage report -m
+    isort --recursive my_app
+    black my_app
+    pylint my_app
+    flake8 my_app
 
-setenv =
-    TEST_DB_HOST = {env:TEST_DB_HOST:localhost}
-    TEST_DB_USER = {env:TEST_DB_USER:postgres}
-    TEST_DB_PASSWORD = {env:TEST_DB_PASSWORD:postgres}
-    TEST_DB_PORT = {env:TEST_DB_PORT:5432}
+[testenv:mypy]
+deps =
+    mypy
+
+commands =
+    mypy my_app
