--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Framework :: Django :: 3.0",
     "Operating System :: OS Independent",
 ]
-url = "https://github.com/yunojuno/poetry-template"
+# url = "https://github.com/yunojuno/poetry-template"
 
 [tool.poetry.dependencies]
 python = "^3.6"
@@ -19,6 +19,9 @@ django = "^2.2 || ^3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+pytest-cov = "^2.8"
+pytest-django = "^3.7"
+coverage = "^4.5"
 pylint = "^2.4"
 pylint-django = "^2.0"
 flake8 = "^3.7"
@@ -28,9 +31,6 @@ isort = "^4.3"
 mypy = "^0.750.0"
 pre-commit = "^1.20"
 black = "=19.3b0"
-pytest-cov = "^2.8"
-pytest-django = "^3.7"
-coverage = "^4.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
