--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
 isolated_build = True
-envlist = py{36,37,38}-django{22,30} lint mypy
+
+; run lint / mypy first so we can fail-fast on simple errors
+envlist =
+    lint
+    mypy
+    py{36,37,38}-django{22,30}
 
 [testenv]
 deps =
