Change tox.ini env format (lint and mypy not running on travis)

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,15 +5,15 @@
 # checking failures via CI.
 
 [mypy]
-python_version=3.7
+; python_version=3.7
 strict_optional=True
 ignore_missing_imports=True
 follow_imports=silent
 warn_redundant_casts=True
 warn_unused_ignores = true
 warn_unreachable = true
-disallow_untyped-defs = true
-disallow_incomplete-defs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
 
 # Disable mypy for admin.py files
 [mypy-*.admin]
