--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,7 @@
 isolated_build = True
 
 ; run lint / mypy first so we can fail-fast on simple errors
-envlist =
-    lint
-    mypy
-    py{36,37,38}-django{22,30}
+envlist = lint, mypy, py{36,37,38}-django{22,30}
 
 [testenv]
 deps =
