Add travis config to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,13 @@
 [tox]
 isolated_build = True
-
 ; run lint / mypy first so we can fail-fast on simple errors
 envlist = lint, mypy, py{36,37,38}-django{22,30}
+
+[travis]
+python =
+    3.6: lint, mypy, py36
+    3.7: lint, mypy, py37
+    3.8: lint, mypy, py38
 
 [testenv]
 deps =
