Rework tox.ini structure
Split out isort and black into their own "fmt" environment.

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 [tox]
 isolated_build = True
-; run lint / mypy first so we can fail-fast on simple errors
-envlist = lint, mypy, py{36,37,38}-django{22,30}
+envlist = fmt, lint, mypy, py{36,37,38}-django{22,30}
 
 [travis]
 python =
-    3.6: lint, mypy, py36
-    3.7: lint, mypy, py37
-    3.8: lint, mypy, py38
+    3.6: fmt, lint, mypy, py36
+    3.7: fmt, lint, mypy, py37
+    3.8: fmt, lint, mypy, py38
 
 [testenv]
 deps =
@@ -22,23 +21,31 @@ commands =
     django-admin --version
     pytest --cov=my_app tests/
 
-[testenv:lint]
+[testenv:fmt]
+description = Python source code formatting (isort, black)
 deps =
-    pylint
-    pylint-django
-    flake8
-    flake8-bandit
-    flake8-docstrings
     isort
     black
 
 commands =
     isort --recursive my_app
     black my_app
+
+[testenv:lint]
+description = Python source code linting (pylint, flake8, bandit, pydocstyle)
+deps =
+    pylint
+    pylint-django
+    flake8
+    flake8-bandit
+    flake8-docstrings
+
+commands =
     pylint my_app
     flake8 my_app
 
 [testenv:mypy]
+description = Python source code type hints (mypy)
 deps =
     mypy
 
