--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,22 @@
 [tox]
 isolated_build = True
-envlist = fmt, lint, mypy, py{36,37,38}-django{22,30}
+envlist = fmt, lint, mypy, py{37,38}-django{22,30}
 
 [travis]
 python =
-    3.6: fmt, lint, mypy, py36
     3.7: fmt, lint, mypy, py37
     3.8: fmt, lint, mypy, py38
 
 [testenv]
 deps =
+    coverage
     pytest
     pytest-cov
     pytest-django
-    coverage
     django22: Django==2.2
     django30: Django==3.0
 
 commands =
-    django-admin --version
     pytest --cov=my_app tests/
 
 [testenv:fmt]
@@ -28,14 +26,13 @@ deps =
     black
 
 commands =
-    isort --recursive my_app
-    black my_app
+    isort --recursive --check-only my_app
+    black --check my_app
 
 [testenv:lint]
 description = Python source code linting (pylint, flake8, bandit, pydocstyle)
 deps =
     pylint
-    pylint-django
     flake8
     flake8-bandit
     flake8-docstrings
