--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,18 +26,19 @@ python = "^3.7"
 django = "^2.2 || ^3.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.0"
-pytest-cov = "^2.8"
-pytest-django = "^3.7"
-coverage = "^4.5"
-pylint = "^2.4"
-flake8 = "^3.7"
-flake8-bandit = "^2.1"
-flake8-docstrings = "^1.5"
-isort = "^4.3"
-mypy = "^0.750.0"
-pre-commit = "^1.20"
-black = "=19.3b0"
+pytest = "*"
+pytest-cov = "*"
+pytest-django = "*"
+coverage = "*"
+pylint = "*"
+flake8 = "*"
+flake8-bandit = "*"
+flake8-docstrings = "*"
+isort = "*"
+mypy = "*"
+pre-commit = "*"
+black = "=19.10b0"
+freezegun = "*"
 
 [build-system]
 requires = ["poetry>=0.12"]
