--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,20 +27,9 @@ repos:
       hooks:
           - id: flake8
             additional_dependencies: ["flake8-docstrings", "flake8-bandit"]
-            exclude: tests
+            exclude: tests|migrations
 
-    # DEPRECATED - now included via flake8-bandit plugin
-    # # python security issues
-    # - repo: https://github.com/PyCQA/bandit
-    #   rev: 1.6.2
-    #   hooks:
-    #   - id: bandit
-    #     args:
-    #       - --quiet
-    #       - --exclude=yunojuno/tests
-    #       - --skip=B308,B311,B703
-
-    # python static type checking
+            # python static type checking
     - repo: https://github.com/pre-commit/mirrors-mypy
       rev: v0.782
       hooks:
@@ -49,11 +38,3 @@ repos:
                 - --ignore-missing-imports
                 # means we only get error on the current file
                 - --follow-imports=silent
-
-    # JS, JSON and SCSS formatting
-    - repo: https://github.com/prettier/prettier
-      rev: 2.0.5
-      hooks:
-          - id: prettier
-            args:
-                - --config=.prettierrc
