Add tox to dev dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     black
 
 commands =
-    isort --recursive --check-only my_app
+    isort --check-only my_app
     black --check my_app
 
 [testenv:lint]
