--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = True
-envlist = fmt, lint, mypy, py{37,38}-django{22,30}
+envlist = fmt, lint, mypy, py{37,38}-django{22,30,31}
 
 [travis]
 python =
@@ -13,8 +13,11 @@ deps =
     pytest
     pytest-cov
     pytest-django
-    django22: Django==2.2
-    django30: Django==3.0
+    django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<3.1
+    django30: Django>=3.1,<3.2
+    ; currently blocked on https://github.com/pytest-dev/pytest-django/issues/858
+    ; djangomaster: https://github.com/django/django/archive/master.tar.gz
 
 commands =
     pytest --cov=my_app tests/
