--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = True
-envlist = fmt, lint, mypy, py{37,38}-django{22,30,31}
+envlist = fmt, lint, mypy, py{37,38}-django{22,30,31,master}
 
 [travis]
 python =
@@ -13,14 +13,15 @@ deps =
     pytest
     pytest-cov
     pytest-django
+    django{22,30}: psycopg2-binary
     django22: Django>=2.2,<2.3
     django30: Django>=3.0,<3.1
-    django30: Django>=3.1,<3.2
+    django31: Django>=3.1,<3.2
     ; currently blocked on https://github.com/pytest-dev/pytest-django/issues/858
-    ; djangomaster: https://github.com/django/django/archive/master.tar.gz
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
 
 commands =
-    pytest --cov=my_app tests/
+    pytest --cov=my_app --verbose tests/
 
 [testenv:fmt]
 description = Python source code formatting (isort, black)
@@ -33,15 +34,13 @@ commands =
     black --check my_app
 
 [testenv:lint]
-description = Python source code linting (pylint, flake8, bandit, pydocstyle)
+description = Python source code linting (flake8, bandit, pydocstyle)
 deps =
-    pylint
     flake8
     flake8-bandit
     flake8-docstrings
 
 commands =
-    pylint my_app
     flake8 my_app
 
 [testenv:mypy]
