--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,14 @@ classifiers = [
     "Framework :: Django",
     "Framework :: Django :: 2.2",
     "Framework :: Django :: 3.0",
+    "Framework :: Django :: 3.1",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
 ]
+packages = [{ include = "my_app" }]
 
 [tool.poetry.dependencies]
 python = "^3.7"
