Add django checks to tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,6 @@ deps =
     coverage
     pytest
     pytest-cov
-    django{22,30}: psycopg2-binary
     django{22,30,31}: pytest-django
     django22: Django>=2.2,<2.3
     django30: Django>=3.0,<3.1
@@ -38,6 +37,13 @@ deps =
 
 commands =
     flake8 my_app
+
+[testenv:django-checks]
+description = Django system checks and missing migrations
+deps = Django
+commands =
+    python manage.py check --fail-level WARNING --settings=tests.settings
+    python manage.py makemigrations --dry-run --check --verbosity 3
 
 [testenv:mypy]
 description = Python source code type hints (mypy)
