--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
         - { python: "3.8", env: TOXENV=py38-django30, services: postgresql }
         - { python: "3.8", env: TOXENV=py38-django31 }
         - { python: "3.8", env: TOXENV=py38-djangomaster }
+        - { python: "3.8", env: TOXENV=django-master }
         - { python: "3.8", env: TOXENV=fmt }
         - { python: "3.8", env: TOXENV=lint }
         - { python: "3.8", env: TOXENV=mypy }
