--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ flake8-docstrings = "*"
 isort = "*"
 mypy = "*"
 pre-commit = "*"
-black = "=19.10b0"
+black = "^19.10b"
 freezegun = "*"
 tox = "*"
 
