--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,14 @@ script: tox
 
 jobs:
     include:
-        - { python: "3.7", env: TOXENV=py37-django22, services: postgresql }
-        - { python: "3.7", env: TOXENV=py37-django30, services: postgresql }
+        - { python: "3.7", env: TOXENV=py37-django22 }
+        - { python: "3.7", env: TOXENV=py37-django30 }
         - { python: "3.7", env: TOXENV=py37-django31 }
-        - { python: "3.8", env: TOXENV=py38-django22, services: postgresql }
-        - { python: "3.8", env: TOXENV=py38-django30, services: postgresql }
+        - { python: "3.8", env: TOXENV=py38-django22 }
+        - { python: "3.8", env: TOXENV=py38-django30 }
         - { python: "3.8", env: TOXENV=py38-django31 }
         - { python: "3.8", env: TOXENV=py38-djangomaster }
-        - { python: "3.8", env: TOXENV=django-master }
+        - { python: "3.8", env: TOXENV=django-checks }
         - { python: "3.8", env: TOXENV=fmt }
         - { python: "3.8", env: TOXENV=lint }
         - { python: "3.8", env: TOXENV=mypy }
