Add checks to travis config

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,13 @@ deps =
 commands =
     pytest --cov=my_app --verbose tests/
 
+[testenv:checks]
+description = Django system checks and missing migrations
+deps = Django
+commands =
+    python manage.py check --fail-level WARNING
+    python manage.py makemigrations --dry-run --check --verbosity 3
+
 [testenv:fmt]
 description = Python source code formatting (isort, black)
 deps =
@@ -37,13 +44,6 @@ deps =
 
 commands =
     flake8 my_app
-
-[testenv:django-checks]
-description = Django system checks and missing migrations
-deps = Django
-commands =
-    python manage.py check --fail-level WARNING --settings=tests.settings
-    python manage.py makemigrations --dry-run --check --verbosity 3
 
 [testenv:mypy]
 description = Python source code type hints (mypy)
