--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ flake8-docstrings = "*"
 isort = "*"
 mypy = "*"
 pre-commit = "*"
-black = "^19.10b"
+black = {version = "*", allow-prereleases = true}
 freezegun = "*"
 tox = "*"
 
