--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -1,4 +1,4 @@
-name: Backend
+name: Python / Django
 
 on:
   push:
@@ -11,25 +11,19 @@ on:
 jobs:
   tox:
     name: Run tox
-
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: [3.7, 3.8]
 
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
-
-      - name: Cache pip/pipenv downloaded packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.cache
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
+          python-version: ${{ matrix.python }}
 
       - name: Install and run tox
         run: |
