--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -9,13 +9,36 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  tox:
+  format:
+    name: Check formatting
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toxenv: [fmt, lint, mypy]
+    env:
+      TOXENV: ${{ toxenv }}
+
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+
+      - name: Install and run tox
+        run: |
+          pip install tox
+          tox
+
+  test:
     name: Run tox
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.7, 3.8]
-        django: [2.2, 3.0, 3.1]
+        python: [37, 38]
+        django: [22, 30, 31]
 
     env:
       TOXENV: py${{ matrix.python }}-django${{ matrix.django }}
