--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -38,11 +38,10 @@ jobs:
     strategy:
       matrix:
         python: [3.7, 3.8]  # used to install python itself
-        pytox:  [37, 38]    # used in tox within '.'
         django: [22, 30, 31]
 
     env:
-      TOXENV: py${{ matrix.pytox }}-django${{ matrix.django }}
+      TOXENV: py${{ matrix.python }}-django${{ matrix.django }}
 
     steps:
       - name: Check out the repository
