--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,25 @@
-language: python
+# language: python
 
-os: linux
+# os: linux
 
-dist: xenial
+# dist: xenial
 
-install: pip install tox
+# install: pip install tox
 
-script: tox
+# script: tox
 
-jobs:
-    include:
-        - { python: "3.7", env: TOXENV=py37-django22 }
-        - { python: "3.7", env: TOXENV=py37-django30 }
-        - { python: "3.7", env: TOXENV=py37-django31 }
-        - { python: "3.8", env: TOXENV=py38-django22 }
-        - { python: "3.8", env: TOXENV=py38-django30 }
-        - { python: "3.8", env: TOXENV=py38-django31 }
-        - { python: "3.8", env: TOXENV=py38-djangomaster }
-        - { python: "3.8", env: TOXENV=checks }
-        - { python: "3.8", env: TOXENV=fmt }
-        - { python: "3.8", env: TOXENV=lint }
-        - { python: "3.8", env: TOXENV=mypy }
-    allow_failures:
-        - { python: "3.8", env: TOXENV=py38-djangomaster }
+# jobs:
+#     include:
+#         - { python: "3.7", env: TOXENV=py37-django22 }
+#         - { python: "3.7", env: TOXENV=py37-django30 }
+#         - { python: "3.7", env: TOXENV=py37-django31 }
+#         - { python: "3.8", env: TOXENV=py38-django22 }
+#         - { python: "3.8", env: TOXENV=py38-django30 }
+#         - { python: "3.8", env: TOXENV=py38-django31 }
+#         - { python: "3.8", env: TOXENV=py38-djangomaster }
+#         - { python: "3.8", env: TOXENV=checks }
+#         - { python: "3.8", env: TOXENV=fmt }
+#         - { python: "3.8", env: TOXENV=lint }
+#         - { python: "3.8", env: TOXENV=mypy }
+#     allow_failures:
+#         - { python: "3.8", env: TOXENV=py38-djangomaster }
