--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -37,8 +37,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.7, 3.8]  # used to install python itself
-        django: [22, 30, 31]
+        python: [37]
+        django: [22]
 
     env:
       TOXENV: py${{ matrix.python }}-django${{ matrix.django }}
