Update to support 3.9 and Django 3.2

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = True
-envlist = fmt, lint, mypy, checks, py{3.7,3.8}-django{22,30,31,master}
+envlist = fmt, lint, mypy, checks, py{3.7,3.8, 3.9}-django{22,30,31,32,main}
 
 [testenv]
 deps =
@@ -11,7 +11,8 @@ deps =
     django22: Django>=2.2,<2.3
     django30: Django>=3.0,<3.1
     django31: Django>=3.1,<3.2
-    djangomaster: https://github.com/django/django/archive/master.tar.gz
+    django32: Django>=3.2,<3.3
+    djangomain: https://github.com/django/django/archive/main.tar.gz
 
 commands =
     pytest --cov=my_app --verbose tests/
@@ -39,6 +40,7 @@ deps =
     flake8
     flake8-bandit
     flake8-docstrings
+    flake8-print
 
 commands =
     flake8 my_app
@@ -47,6 +49,9 @@ commands =
 description = Python source code type hints (mypy)
 deps =
     mypy
+    types-requests
+    types-python-dateutil
+    types-simplejson
 
 commands =
     mypy my_app
