--- a/mypy.ini
+++ b/mypy.ini
@@ -1,12 +1,14 @@
 [mypy]
-strict_optional=True
-ignore_missing_imports=True
-follow_imports=silent
-warn_redundant_casts=True
-warn_unused_ignores = true
-warn_unreachable = true
-disallow_untyped_defs = true
+check_untyped_defs = true
 disallow_incomplete_defs = true
+disallow_untyped_defs = true
+follow_imports = silent
+ignore_missing_imports = true
+no_implicit_optional = true
+strict_optional=True
+warn_redundant_casts=True
+warn_unreachable = true
+warn_unused_ignores = true
 
 # Disable mypy for migrations
 [mypy-*.migrations.*]
