--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,13 @@ classifiers = [
     "Framework :: Django :: 2.2",
     "Framework :: Django :: 3.0",
     "Framework :: Django :: 3.1",
+    "Framework :: Django :: 3.2",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
 ]
 packages = [{ include = "my_app" }]
 
@@ -37,12 +39,16 @@ pylint = "*"
 flake8 = "*"
 flake8-bandit = "*"
 flake8-docstrings = "*"
+flake8-print = "*"
 isort = "*"
 mypy = "*"
 pre-commit = "*"
 black = {version = "*", allow-prereleases = true}
 freezegun = "*"
 tox = "*"
+types-requests = "*"
+types-python-dateutil = "*"
+types-simplejson = "*"
 
 [build-system]
 requires = ["poetry>=0.12"]
