--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,25 +1,31 @@
 repos:
-    # python import sorting - will amend files
-    - repo: https://github.com/pre-commit/mirrors-isort
-      rev: v5.8.0
-      hooks:
-          - id: isort
+  # python import sorting - will amend files
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.9.3
+    hooks:
+      - id: isort
 
-    # python code formatting - will amend files
-    - repo: https://github.com/ambv/black
-      rev: 21.6b0
-      hooks:
-          - id: black
+  # python code formatting - will amend files
+  - repo: https://github.com/ambv/black
+    rev: 21.7b0
+    hooks:
+      - id: black
 
-    # Flake8 includes pyflakes, pycodestyle, mccabe, pydocstyle, bandit
-    - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.9.2
-      hooks:
-          - id: flake8
-            additional_dependencies: ["flake8-docstrings", "flake8-bandit"]
+  # python syntax updates
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.23.3
+    hooks:
+      - id: pyupgrade
 
-    # python static type checking
-    - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.902
-      hooks:
-          - id: mypy
+  # Flake8 includes pyflakes, pycodestyle, mccabe, pydocstyle, bandit
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        additional_dependencies: ["flake8-docstrings", "flake8-bandit", "flake8-print"]
+
+  # python static type checking
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.910
+    hooks:
+      - id: mypy
