--- a/mypy.ini
+++ b/mypy.ini
@@ -1,23 +1,23 @@
 [mypy]
-check_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_untyped_defs = true
-follow_imports = silent
-ignore_missing_imports = true
-no_implicit_optional = true
-strict_optional=True
-warn_redundant_casts=True
-warn_unreachable = true
-warn_unused_ignores = true
+check_untyped_defs=true
+disallow_incomplete_defs=true
+disallow_untyped_defs=true
+follow_imports=silent
+ignore_missing_imports=true
+no_implicit_optional=true
+strict_optional=true
+warn_redundant_casts=true
+warn_unreachable=true
+warn_unused_ignores=true
 
 # Disable mypy for migrations
 [mypy-*.migrations.*]
-ignore_errors=True
+ignore_errors=true
 
 # Disable mypy for settings
 [mypy-*.settings.*]
-ignore_errors=True
+ignore_errors=true
 
-# Disable mypy for tests
-[mypy-tests.*]
-ignore_errors=True
+; # Disable mypy for tests
+; [mypy-tests.*]
+; ignore_errors=true
