--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,15 @@ repos:
     rev: 3.9.2
     hooks:
       - id: flake8
-        additional_dependencies: ["flake8-docstrings", "flake8-bandit", "flake8-print"]
+        additional_dependencies:
+          [
+            "flake8-bandit",
+            "flake8-blind-except",
+            "flake8-builtins",
+            "flake8-docstrings",
+            "flake8-logging-format",
+            "flake8-print"
+          ]
 
   # python static type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
