Update pre-commit and tox configurations

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = True
-envlist = fmt, lint, mypy, checks, py{3.7,3.8, 3.9}-django{22,30,31,32,main}
+envlist = fmt, lint, mypy, checks, py{3.7,3.8,3.9}-django{22,30,31,32,main}
 
 [testenv]
 deps =
@@ -39,7 +39,9 @@ description = Python source code linting (flake8, bandit, pydocstyle)
 deps =
     flake8
     flake8-bandit
+    flake8-blind-except
     flake8-docstrings
+    flake8-logging-format
     flake8-print
 
 commands =
