--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,13 +7,12 @@ repos:
 
   # python code formatting - will amend files
   - repo: https://github.com/ambv/black
-    rev: 21.7b0
+    rev: 21.8b0
     hooks:
       - id: black
 
-  # python syntax updates
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.23.3
+    rev: v2.25.0
     hooks:
       - id: pyupgrade
 
@@ -23,17 +22,24 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies:
-          [
-            "flake8-bandit",
-            "flake8-blind-except",
-            "flake8-builtins",
-            "flake8-docstrings",
-            "flake8-logging-format",
-            "flake8-print"
-          ]
+          - flake8-bandit
+          - flake8-blind-except
+          - flake8-docstrings
+          - flake8-logging-format
+          - flake8-print
 
   # python static type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.910
     hooks:
       - id: mypy
+        additional_dependencies:
+          - types-geoip2
+        args:
+          - --disallow-untyped-defs
+          - --disallow-incomplete-defs
+          - --check-untyped-defs
+          - --no-implicit-optional
+          - --ignore-missing-imports
+          - --follow-imports=silent
+        exclude: ^tests
