--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,24 +31,22 @@ python = "^3.7"
 django = "^2.2 || ^3.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "*"
-pytest-cov = "*"
-pytest-django = "*"
+black = {version = "*", allow-prereleases = true}
 coverage = "*"
-pylint = "*"
 flake8 = "*"
 flake8-bandit = "*"
+flake8-blind-except = "*"
 flake8-docstrings = "*"
+flake8-logging-format = "*"
 flake8-print = "*"
+freezegun = "*"
 isort = "*"
 mypy = "*"
 pre-commit = "*"
-black = {version = "*", allow-prereleases = true}
-freezegun = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-django = "*"
 tox = "*"
-types-requests = "*"
-types-python-dateutil = "*"
-types-simplejson = "*"
 
 [build-system]
 requires = ["poetry>=0.12"]
