Add demo catalog app from MDN

--- a/mypy.ini
+++ b/mypy.ini
@@ -18,6 +18,10 @@ ignore_errors=true
 [mypy-*.settings.*]
 ignore_errors=true
 
+# Disable mypy for demo app - copied from MDN
+[mypy-demo.catalog.*]
+ignore_errors=true
+
 ; # Disable mypy for tests
 ; [mypy-tests.*]
 ; ignore_errors=true
