--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ pytest = "*"
 pytest-cov = "*"
 pytest-django = "*"
 tox = "*"
+dj-database-url = "^0.5.0"
+whitenoise = "^5.3.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
