--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = True
-envlist = fmt, lint, mypy, checks, py{3.7,3.8,3.9}-django{22,30,31,32,main}
+envlist = fmt, lint, mypy, checks, py{3.8,3.9,3.10}-django{32,41,42,main}
 
 [testenv]
 deps =
@@ -8,10 +8,9 @@ deps =
     pytest
     pytest-cov
     pytest-django
-    django22: Django>=2.2,<2.3
-    django30: Django>=3.0,<3.1
-    django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
+    django40: Django>=4.0,<4.1
+    django41: Django>=4.1,<4.2
     djangomain: https://github.com/django/django/archive/main.tar.gz
 
 commands =
@@ -37,7 +36,7 @@ commands =
 [testenv:lint]
 description = Python source code linting (flake8, bandit, pydocstyle)
 deps =
-    flake8
+    flake8==3.9.2
     flake8-bandit
     flake8-blind-except
     flake8-docstrings
