--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toxenv: [fmt,lint,mypy]
+        toxenv: [fmt, lint, mypy]
     env:
       TOXENV: ${{ matrix.toxenv }}
 
@@ -22,50 +22,51 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v1
+      - name: Set up Python (3.11)
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.11"
 
       - name: Install and run tox
         run: |
           pip install tox
           tox
 
+  format:
+    name: Run Django check
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python (3.11)
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install and run tox
+        run: |
+          pip install tox
+          tox -e checks
+
   test:
     name: Run tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.9]
-        django: [22,32,main]
+        python: ["3.8", "3.9", "3.10", "3.11"]
+        django: ["32", "40", "41", "main"]
 
     env:
       TOXENV: py${{ matrix.python }}-django${{ matrix.django }}
 
-    # services:
-    #   postgres:
-    #     image: postgres:12
-    #     env:
-    #       POSTGRES_USER: postgres
-    #       POSTGRES_PASSWORD: postgres
-    #       POSTGRES_DB: onfido
-    #       # Set health checks to wait until postgres has started
-    #     options: >-
-    #       --health-cmd pg_isready
-    #       --health-interval 10s
-    #       --health-timeout 5s
-    #       --health-retries 5
-    #     ports:
-    #       # Maps tcp port 5432 on service container to the host
-    #       - 5432:5432
-
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
 
