--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,25 +13,25 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Web Environment",
     "Framework :: Django",
-    "Framework :: Django :: 2.2",
-    "Framework :: Django :: 3.0",
-    "Framework :: Django :: 3.1",
     "Framework :: Django :: 3.2",
+    "Framework :: Django :: 4.0",
+    "Framework :: Django :: 4.1",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
 packages = [{ include = "my_app" }]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-django = "^2.2 || ^3.0"
+python = "^3.8"
+django = "^3.2 || ^4.0"
 
 [tool.poetry.dev-dependencies]
-black = {version = "*", allow-prereleases = true}
+black = "*"
 coverage = "*"
 flake8 = "*"
 flake8-bandit = "*"
@@ -46,8 +46,6 @@ pytest = "*"
 pytest-cov = "*"
 pytest-django = "*"
 tox = "*"
-dj-database-url = "^0.5.0"
-whitenoise = "^5.3.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
