--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,12 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
 packages = [{ include = "my_app" }]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 django = "^3.2 || ^4.0"
 
 [tool.poetry.dev-dependencies]
