--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       matrix:
         python: ["3.8", "3.9", "3.10", "3.11"]
-        django: ["32", "40", "41", "main"]
+        django: ["32", "40", "41", "42", "main"]
 
     env:
       TOXENV: py${{ matrix.python }}-django${{ matrix.django }}
