--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
 isolated_build = True
-envlist = fmt, lint, mypy, checks, py{3.8,3.9,3.10,3.11}-django{32,40,41,main}
+envlist =
+    fmt, lint, mypy,
+    django-checks,
+    py{3.8,3.9,3.10,3.11}-django{32,40,41,42}
+    py{3.10,3.11}-django{main}
 
 [testenv]
 deps =
@@ -11,12 +15,13 @@ deps =
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
+    django42: Django>=4.2,<4.3
     djangomain: https://github.com/django/django/archive/main.tar.gz
 
 commands =
     pytest --cov=my_app --verbose tests/
 
-[testenv:checks]
+[testenv:django-checks]
 description = Django system checks and missing migrations
 deps = Django
 commands =
@@ -24,7 +29,7 @@ commands =
     python manage.py makemigrations --dry-run --check --verbosity 3
 
 [testenv:fmt]
-description = Python source code formatting (isort, black)
+description = Python source code formatting (black)
 deps =
     isort
     black
@@ -34,17 +39,12 @@ commands =
     black --check my_app
 
 [testenv:lint]
-description = Python source code linting (flake8, bandit, pydocstyle)
+description = Python source code linting (ruff)
 deps =
-    flake8==3.9.2
-    flake8-bandit
-    flake8-blind-except
-    flake8-docstrings
-    flake8-logging-format
-    flake8-print
+    ruff
 
 commands =
-    flake8 my_app
+    ruff my_app
 
 [testenv:mypy]
 description = Python source code type hints (mypy)
