--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python (3.11)
         uses: actions/setup-python@v4
@@ -39,6 +39,11 @@ jobs:
       matrix:
         python: ["3.8", "3.9", "3.10", "3.11"]
         django: ["32", "40", "41", "42", "main"]
+        exclude:
+          - python: "3.8"
+            django: "main"
+          - python: "3.9"
+            django: "main"
 
     env:
       TOXENV: py${{ matrix.python }}-django${{ matrix.django }}
