Update build matrix

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,10 @@ isolated_build = True
 envlist =
     fmt, lint, mypy,
     django-checks,
-    py{3.8,3.9,3.10,3.11}-django{32,40,41,42}
-    py{3.10,3.11}-django{main}
+    py38-django{32,40,41,42}
+    py39-django{32,40,41,42}
+    py310-django{32,40,41,42,main}
+    py311-django{32,40,41,42,main}
 
 [testenv]
 deps =
@@ -48,9 +50,6 @@ commands =
 description = Python source code type hints (mypy)
 deps =
     mypy
-    types-requests
-    types-python-dateutil
-    types-simplejson
 
 commands =
     mypy my_app
