--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,13 @@ isolated_build = True
 envlist =
     fmt, lint, mypy,
     django-checks,
+    ;      | 3.2 | 4.2 | 5.0 | main
+    ; ---  | --- | --- | --- | ---
+    ; 3.8  | x   | x   | -   | -
+    ; 3.9  | x   | x   | -   | -
+    ; 3.10 | x   | x   | x   | x
+    ; 3.11 | x   | x   | x   | x
+    ; 3.12 | x   | x   | x   | x
     py38-django{32,40,41,42}
     py39-django{32,40,41,42}
     py310-django{32,40,41,42,main}
