--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,19 @@ isolated_build = True
 envlist =
     fmt, lint, mypy,
     django-checks,
+    ; https://docs.djangoproject.com/en/5.0/releases/
     ;      | 3.2 | 4.2 | 5.0 | main
     ; ---  | --- | --- | --- | ---
     ; 3.8  | x   | x   | -   | -
     ; 3.9  | x   | x   | -   | -
     ; 3.10 | x   | x   | x   | x
-    ; 3.11 | x   | x   | x   | x
-    ; 3.12 | x   | x   | x   | x
+    ; 3.11 | -   | x   | x   | x
+    ; 3.12 | -   | -   | x   | x
     py38-django{32,40,41,42}
     py39-django{32,40,41,42}
-    py310-django{32,40,41,42,main}
-    py311-django{32,40,41,42,main}
+    py310-django{32,40,41,42,50,main}
+    py311-django{32,40,41,42,50,main}
+    py312-django{32,40,41,42,50,main}
 
 [testenv]
 deps =
@@ -25,6 +27,7 @@ deps =
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<4.3
+    django50: https://github.com/django/django/archive/stable/5.0.x.tar.gz
     djangomain: https://github.com/django/django/archive/main.tar.gz
 
 commands =
