--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python (3.11)
         uses: actions/setup-python@v4
@@ -37,8 +37,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.8", "3.9", "3.10", "3.11"]
-        django: ["32", "40", "41", "42", "main"]
+        python: ["3.8", "3.9", "3.10", "3.11", "3.12]
+        django: ["32", "40", "41", "42", "50", "main"]
         exclude:
           - python: "3.8"
             django: "50"
@@ -48,13 +48,23 @@ jobs:
             django: "50"
           - python: "3.9"
             django: "main"
+          - python: "3.10"
+            django: "main"
+          - python: "3.11"
+            django: "32"
+          - python: "3.11"
+            django: "40"
+          - python: "3.12"
+            django: "32"
+          - python: "3.12"
+            django: "40"
 
     env:
-      TOXENV: py${{ matrix.python }}-django${{ matrix.django }}
+      TOXENV: django${{ matrix.django }}-py${{ matrix.python }}
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
