--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -37,8 +37,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.8", "3.9", "3.10", "3.11", "3.12]
-        django: ["32", "40", "41", "42", "50", "main"]
+        python: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        # build LTS version, next version, HEAD
+        django: ["32", "42", "50", "main"]
         exclude:
           - python: "3.8"
             django: "50"
@@ -52,12 +53,8 @@ jobs:
             django: "main"
           - python: "3.11"
             django: "32"
-          - python: "3.11"
-            django: "40"
           - python: "3.12"
             django: "32"
-          - python: "3.12"
-            django: "40"
 
     env:
       TOXENV: django${{ matrix.django }}-py${{ matrix.python }}
