--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist =
     django41-py{38,39,310,311}
     django42-py{38,39,310,311}
     django50-py{310,311,312}
-    djangmain-py{311,312}
+    djangomain-py{311,312}
 
 [testenv]
 deps =
