--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,17 +33,20 @@ packages = [{ include = "my_app" }]
 python = "^3.8"
 django = "^3.2 || ^4.0 || ^5.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "*"
-coverage = "*"
-freezegun = "*"
 mypy = "*"
 pre-commit = "*"
+ruff = "*"
+
+[tool.poetry.group.test.dependencies]
+coverage = "*"
 pytest = "*"
 pytest-cov = "*"
 pytest-django = "*"
-ruff = "*"
 tox = "*"
+
+[tool.poetry.extras]
 
 [build-system]
 requires = ["poetry>=0.12"]
